# AmoebasEvolution

./: Amoeba.cpp  Amoeba.h  AmoebaFood.cpp  AmoebaFood.h  AmoebaWorld.cpp  AmoebaWorld.h  CMakeLists.txt  main.cpp  main.h  project.txt
